opam-version: "2.0"
name: "genexpe"
synopsis: "experimentation on generating concurrent programs with preconditions"
maintainer: "Nicolas Osborne <email@n-osborne.info>"
authors: "Nicolas Osborne <email@n-osborne.info>"
homepage: "https://github.com/n-osborne/genexpe"
bug-reports: "https://github.com/n-osborne/genexpe/issues"
dev-repo: "git://github.com/n-osborne/genexpe"
depends: [
  "ocaml" {>= "4.12"}
  "dune"
  "qcheck" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
